@@ -24,6 +24,8 @@ not yet  BJH  Release 10.50.00
               pamflip: Speed up for most images.  Thanks Prophet of the Way
               <afu@wta.att.ne.jp>.
 
+              pnmhistmap: Fix crash with -width.  Always broken.
+
               libppmd/ppmpat: fix wild pointer in ppmd_fill_drawprocp();
               broken in 10.47.
 
